# ULTRAPROJECT

./: .env.example  .gitignore  .mcp.example.json  .mcp.template.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SYSTEM.md  TRADEMARKS.md  oneshot.py  pyproject.toml  requirements.txt  ultraproject.py  ultraprompt.py
.claude/: settings.json
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  PUBLISHING.md  QUICKSTART.md  SETUP.md  WINDOWS_COMPATIBILITY_ACCEPTANCE_REPORT.md
examples/: README.md  audit-a-repo.md  build-landing-page.md  research-and-report.md
schemas/: acquisition-manifest.schema.json  adjudication-record.schema.json  aesthetic-index.schema.json  aesthetic-preset.schema.json  amendment-lock.schema.json  artifact-coherence-thresholds.schema.json  artifact-manifest.schema.json  artifact-producer.schema.json  brand-system.schema.json  centroid-meta.schema.json  coherence-signoff.schema.json  concurrency-report.schema.json  custom-aesthetic.schema.json  disposition-checkpoint.schema.json  medium-plugin.schema.json  missing-producer-report.schema.json  oai-plan-response.schema.json  oai-spend-response.schema.json  oai-tool-response.schema.json  outcome-data.schema.json  proposal-frontmatter.schema.json  redline-diff.schema.json  regression-report.schema.json  resolver-output.schema.json  specificity-candidates.schema.json  specificity-contract.schema.json  spending-reservation.schema.json  token-payload-3d_render.schema.json  token-payload-brand_identity.schema.json  token-payload-data_visualization.schema.json  token-payload-document_typography.schema.json  token-payload-game_ui.schema.json  token-payload-native_ui.schema.json  token-payload-presentation.schema.json  token-payload-video_animation.schema.json  token-payload-web_ui.schema.json  tool-survey.schema.json  tools-catalog-entry.schema.json  tools-catalog-overlay.schema.json  visual-axes-value-table.schema.json  (+3 more)
scripts/: acquire_tool.py  aesthetic_change_proposer.py  agent_runtime.py  aggregate_visual_engagement_report.py  artifact_registry.py  audit_override_tags.py  backfill_project_ticket_links.py  build_claim_ledger.py  build_collusion_baseline.py  build_phase_gate_packet.py  build_project_context.py  build_project_image_evidence.py  build_project_rehearsal.py  build_project_video_evidence.py  build_review_pack.py  build_stock_deck.py  calibrate_estimates.py  capture_walkthrough_video.py  check_artifact_coherence.py  check_artifact_producer_concurrency.py  check_brief_gate.py  check_brief_specificity_adequacy.py  check_clip_embedding.py  check_clock_skew.py  check_contrast.py  check_delivery_gate.py  check_gate_packet.py  check_operator_waiver_rate.py  check_phase_readiness.py  check_plan_compliance.py  check_playbook_overreach.py  check_polish_gate.py  check_producer_health.py  check_producer_slot_telemetry.py  check_provenance.py  check_quality_contract.py  check_research_context.py  check_resolver_generation.py  check_review_surface.py  check_semantic_layout.py  (+69 more)
(+365 files in other folders)
